Fixing some center alignment inside the boxes

--- a/style.css
+++ b/style.css
@@ -17,11 +17,12 @@ img.mr-circle.mr-avatar {width: 60px;height: 60px;border: white 6px solid;border
 
 .mr-imgbox {
   position: absolute;
-  top: 0;
-  left: -50%;
+  top: 50%;
+  left: 50%;
   bottom: 0;
   right: 0;
   overflow: hidden;
   height: 100%;
   width: auto;
+  transform: translate(-50%, -50%);
 }
